Se agregó la variable de entorno PASSPHRASE al .env.example

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 USER_SUPER_ADMIN_NAME="Super Admin"
 USER_SUPER_ADMIN_EMAIL=admin@kemok.io
 USER_SUPER_ADMIN_PASSWORD=password
+
+PASSPHRASE=
