Se integró FEL al sistema

--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,26 @@ USER_SUPER_ADMIN_EMAIL=admin@kemok.io
 USER_SUPER_ADMIN_PASSWORD=password
 
 PASSPHRASE=
+
+FEL_ENV=testing
+FEL_URL_TO_SIGN=
+FEL_USER_TO_SIGN=
+FEL_TOKEN_TO_SIGN=
+FEL_USER_TO_CERTIFY=
+FEL_TOKEN_TO_CERTIFY=
+FEL_URL_TO_CERTIFY=
+FEL_URL_TO_CANCEL=
+FEL_CODIGO_MONEDA=
+FEL_AFILIACION_IVA=
+FEL_CODIGO_ESTABLECIMIENTO=
+FEL_NIT_EMISOR=
+FEL_CORREO_EMISOR=
+FEL_NOMBRE_COMERCIAL=
+FEL_NOMBRE_EMISOR=
+FEL_DIRECCION_EMISOR=
+FEL_CODIGO_POSTAL_EMISOR=
+FEL_MUNICIPIO_EMISOR=
+FEL_DEPARTAMENTO_EMISOR=
+FEL_PAIS_EMISOR=
+FEL_CODIGO_ESCENARIO=
+FEL_TIPO_FRASE=
