Se definieron las políticas de Depósitos, Métodos de Pago, Compras, Ventas, Conteos y Turnos de Tienda

--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,7 @@ FEL_USER_TO_CERTIFY=
 FEL_TOKEN_TO_CERTIFY=
 FEL_URL_TO_CERTIFY=
 FEL_URL_TO_CANCEL=
+FEL_INVOICE_BASE_URL=
 FEL_CODIGO_MONEDA=
 FEL_AFILIACION_IVA=
 FEL_CODIGO_ESTABLECIMIENTO=
